--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,2 @@
 PORT= 4000
-MONGOURL = mongodb+srv://jatin12:<Jatin1234>@cluster0.4tpelze.mongodb.net/
+MONGOURL = mongodb+srv://jatin1234:<Jatin1234@>@cluster0.4tpelze.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
