--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,5 @@
-PORT= 4000
-MONGOURL = mongodb://localhost:27017/crud
+MONGOURL=mongodb+srv://jatin1234:yZ43ckvouTiO6eV6@cluster0.4tpelze.mongodb.net/cruds?retryWrites=true&w=majority
+PORT=5000
+
+
+# mongodb+srv://<jatin1234>:<yZ43ckvouTiO6eV6>@cluster0.4tpelze.mongodb.net/?retryWrites=true&w=majority
